--- a/public/index.html
+++ b/public/index.html
@@ -1,48 +1,66 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Vue</title>
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+<head>
+    <meta charset="utf-8">
+    <title>Ceaser Shifter</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 </head>
+
 <body>
 
-  <!-- navigation bar -->
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <a class="navbar-brand"><i class="glyphicon glyphicon-bullhorn"></i> Vue Events Bulletin Board</a>
-    </div>
-  </nav>
-
-  <!-- main body of our application -->
-  <div class="container" id="events">
-
-    <!-- add an event form -->
-    <div class="col-sm-6">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3>Add an Event</h3>
+    <!-- navigation bar -->
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <a class="navbar-brand"><i class="glyphicon glyphicon-king"></i> Ceaser Shifter</a>
         </div>
-        <div class="panel-body">
+    </nav>
 
+    <!-- main body of our application -->
+    <div class="container" id="events">
+        <div class="row">
+
+
+            <!-- add an event form -->
+            <div class="col-sm-6 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3>Kulcs Generálás</h3>
+                    </div>
+                    <div class="panel-body">
+                        <form class="" action="index.html" method="post">
+                            <textarea id="key" name="key" class="form-control" rows="3"></textarea>
+                        </form>
+                        <input v-on:click="generate"  type="button" name="" value="Generálás">
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- show the events -->
+            <div class="col-sm-6 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3>Kódolás</h3>
+                    </div>
+                    <div class="panel-body">
+                        <form class="" action="index.html" method="post">
+                            <textarea name="key" class="form-control" rows="3"></textarea>
+                        </form>
+                        <input type="button" name="code" value="Kódolás">
+                        <input type="button" name="decode" value="Dekódolás">
+                    </div>
+
+                </div>
+            </div>
         </div>
-
-      </div>
     </div>
 
-    <!-- show the events -->
-    <div class="col-sm-6">
-      <div class="list-group">
-
-      </div>
-    </div>
-  </div>
-
-  <!-- JS -->
-  <script src="vue/vue.js"></script>
-  <script src="vue-resource/vue-resource.js"></script>
-  <script src="app.js"></script>
+    <!-- JS -->
+    <script src="vue/vue.js"></script>
+    <script src="js/app.js"></script>
 </body>
+
 </html>
