--- a/public/index.html
+++ b/public/index.html
@@ -51,21 +51,28 @@
                     </div>
                     <div class="panel-body">
                         <form class="" action="index.html" method="post">
-                            <textarea name="key" class="form-control" rows="3"></textarea>
+                            <div class="form-group">
+                                <label for="inputText">Input: </label>
+                                <textarea id="inputText" name="text" class="form-control" rows="3"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="outputText">Output: </label>
+                                <textarea id="outputText" name="key" class="form-control" rows="3" readonly></textarea>
+                            </div>
                         </form>
-                        <input type="button" name="code" value="Kódolás">
-                        <input type="button" name="decode" value="Dekódolás">
-                    </div>
+                        <input type="button" name="code" v-on:click="code" value="Kódolás">
+                        <input type="button" name="decode" v-on:click="decode" value="Dekódolás">
+                        </div>
 
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- JS -->
-    <script src="vue/vue.js"></script>
-    <script src="axios/axios.min.js"></script>
-    <script src="js/app.js"></script>
+        <!-- JS -->
+        <script src="vue/vue.js"></script>
+        <script src="axios/axios.min.js"></script>
+        <script src="js/app.js"></script>
 </body>
 
 </html>
